force-app/main/default/objects/Article__c/fields/Article_Link_URL__c.field-meta.xml
<CustomField>
    <fullName>Article_Link_URL__c</fullName>
    <label>Article Link URL</label>
    <type>Url</type>
</CustomField>