force-app/main/default/objects/Article__c/fields/Body_Text__c.field-meta.xml
<CustomField>
    <fullName>Body_Text__c</fullName>
    <label>Body Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>