force-app/main/default/objects/Article__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>The date that the article should cease to display in the portal (leave blank to display in perpetuity).</description>
    <inlineHelpText>The date that the article should cease to display in the portal (leave blank to display in perpetuity).</inlineHelpText>
    <label>Close Date</label>
    <type>DateTime</type>
</CustomField>