force-app/main/default/objects/Article__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Articles order by date by default, but the Order field can be used to place articles at the top.</description>
    <inlineHelpText>Articles order by date by default, but the Order field can be used to place articles at the top.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>