force-app/main/default/objects/Article__c/fields/Show_in_Portal__c.field-meta.xml
<CustomField>
    <fullName>Show_in_Portal__c</fullName>
    <label>Show in Portal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>